force-app/main/default/objects/AzureOIDCAuthProvider__mdt/AzureOIDCAuthProvider__mdt.object-meta.xml
<CustomObject>
    <description>Stores the setting related to any OIDC providers connecting to Azure</description>
    <label>Azure OIDC Auth Provider</label>
    <pluralLabel>Azure OIDC Auth Providers</pluralLabel>
</CustomObject>