force-app/main/default/objects/AzureOIDCAuthProvider__mdt/fields/AuthoriseEndpointUrl__c.field-meta.xml
<CustomField>
    <fullName>AuthoriseEndpointUrl__c</fullName>
    <description>The endpoint to redirect the user to authenticate with Azure</description>
    <inlineHelpText>The endpoint to redirect the user to authenticate with Azure</inlineHelpText>
    <label>Authorise Endpoint Url</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>