force-app/main/default/objects/AzureOIDCAuthProvider__mdt/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>Client ID for Azure Application</description>
    <inlineHelpText>Client ID for Azure Application</inlineHelpText>
    <label>Client Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>