force-app/main/default/objects/AzureOIDCAuthProvider__mdt/fields/ExternalCredentialName__c.field-meta.xml
<CustomField>
    <fullName>ExternalCredentialName__c</fullName>
    <description>The name of the external credential containing the client secret for the auth provider. This is the external credential assigned to the named credential.</description>
    <inlineHelpText>The name of the external credential containing the client secret for the auth provider. This is the external credential assigned to the named credential.</inlineHelpText>
    <label>External Credential Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>