force-app/main/default/objects/AzureOIDCAuthProvider__mdt/fields/NamedCredentialTokenUrlName__c.field-meta.xml
<CustomField>
    <fullName>NamedCredentialTokenUrlName__c</fullName>
    <description>The named credential containing the Token URL with the stored secret in an external credential.</description>
    <inlineHelpText>The named credential containing the Token URL with the stored secret in an external credential.</inlineHelpText>
    <label>Named Credential Token Url Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>