force-app/main/default/objects/AzureOIDCAuthProvider__mdt/fields/RedirectUrl__c.field-meta.xml
<CustomField>
    <fullName>RedirectUrl__c</fullName>
    <description>The redirect url to send the user back to after authentication completes in Azure. This will be the &apos;callback url&apos; of the specific community to redirect the user back to.</description>
    <inlineHelpText>The redirect url to send the user back to after authentication completes in Azure. This will be the &apos;callback url&apos; of the specific community to redirect the user back to.</inlineHelpText>
    <label>Redirect Url</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>