force-app/main/default/objects/AzureOIDCAuthProvider__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>The scopes to use for authorisation</description>
    <inlineHelpText>The scopes to use for authorisation</inlineHelpText>
    <label>Scope</label>
    <length>50</length>
    <type>Text</type>
</CustomField>